--- a/.gitignore
+++ b/.gitignore
@@ -22,7 +22,7 @@ override.tf.json
 *_override.tf.json
 
 
-sensitive.auto.tfvars
+**/sensitive.auto.tfvars
 # Include override files you do wish to add to version control using negated pattern
 #
 # !example_override.tf
